# food_agent

./: .gitignore  Cargo.toml  README.md  app.py  database_setup.sql  prompts.py  react.py  requirements.txt  setup.py  utils.py
food_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/food_agent_frontend/: Cargo.toml  index.html
frontend/food_agent_frontend/src/: chat.rs  google_callback.rs  home.rs  login.rs  main.rs  signup.rs  types.rs
python/: __init__.py  app.py  chat.py  prompts.py  react.py  requirements.txt  tools.py  utils.py
src/: handlers.rs  lib.rs  main.rs  models.rs  reminder.rs  storage.rs
src/food_agent.egg-info/: SOURCES.txt
