[package]
name = "food_agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "food_agent"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
google-calendar3 = "5.0.4+20210325"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.19", features = ["extension-module", "abi3-py38"] }
mysql = "26.0.0"
dotenvy = "0.15"