[package]
name = "food_agent_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.2", features = ["csr", "nightly"] }
leptos_router = "0.8.2"
gloo-net = { version = "0.4", features = ["http"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["time"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
web = "0.2.12"
web-sys = { version = "0.3.77", features = ["Window", "Storage", "console", "HtmlInputElement", "Element"]}
